--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
             <span>R</span>adio <span>M</span>urka
         </div>
         <div class="image">
-            <img id="deviceImage" src="cat.png" alt="Radio Image" class="radioImage">
+            <img id="deviceImage" src="cat1.png" alt="Radio Image" class="radioImage">
             <img class="light" src="volume1.png" alt="leftL" id="leftL">
             <img class="light" src="volume1.png" alt="leftM" id="leftM">
             <img class="light" src="volume1.png" alt="leftS" id="leftS">
